<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">圣经</string>
    <string name="text_chapter_number_input">请输入章节数字</string>
    <string name="text_view_chapter_chooser_book_name_text">请输入书名汉字的每个首位拼音</string>
    <string name="text_view_chapter_chooser_chapter_number_text">请输入数字选第几章</string>
    <string name="menu_text_choose_bible">同卷跳转</string>
    <string name="menu_old_testament">旧约</string>
    <string name="menu_new_testament">新约</string>
    <string name="text_old_testament">旧约</string>
    <string name="text_new_testament">新约</string>
    <string name="menu_text_next_chapter">后一章</string>
    <string name="menu_text_previous_chapter">前一章</string>
    <string name="menu_text_bible_version_hhb">中</string>
    <string name="menu_text_bible_version_niv">英</string>
    <string name="menu_text_bible_version_mix">中/英</string>
    <string name="menu_text_share">共享</string>
    <string name="menu_version">版本</string>
    
    
    <string name="menu_settings">设置</string>
    
    <string name="alert_dialog_title">退出圣经应用</string>
    <string name="alert_dialog_ok_button_text">是</string>
    <string name="alert_dialog_notok_button_text">否</string>
    <string name="alert_chapter_number_exceed_max">所选择的章节超过本书最大章节数</string>
    <string name="alert_first_chapter_already">已经是第一章</string>
    <string name="alert_last_chapter_already">已经是最后一章</string>
    <string name="alert_generic_error_msg">错误发生！</string>
    
    <string name="btn_intialize">初始化</string>
    
    
    <string name="setting_font_size_caption">设置字体大小</string>
    
    <string name="setting_font_size_header_title">标题字体</string>
    <string name="setting_font_size_header_description">设置标题字体大小</string>
    
    
    <string name="setting_font_size_textview_title">圣经正文字体</string>
    <string name="setting_font_size_textview_description">设置文本字体大小</string>
    
    <string name="setting_font_size_chapterChooser_title">圣经章节选取字体</string>
    <string name="setting_font_size_chapterChooser_description">设置章节选取字体大小</string>
    
    <string name="version_number">3.11--[8/28/2014]</string>
    

</resources>
